--- a/aboutus.html
+++ b/aboutus.html
@@ -2,6 +2,8 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>About Us</title>
+	    
+	  
          <link href="aboutus.css" type="text/css" rel="stylesheet">
          <link rel="stylesheet" href="style.css">    
          <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
@@ -17,7 +19,7 @@
                </p>
         </div>
 		<div class="hero-img-div" data-aos="fade-down">
-            <img class="hero-img" src="https://lh3.googleusercontent.com/proxy/XVaUmOGnCfMESKEIljOI4v5ME06M8BCWhW0Jxul9tCNUZ4gAeupXyeQ79BGwapNZqgPqYvdsOpnlLAaHXlyZdjscLymOONR_MjTTQ0ttHwESZ25H03gqrpuVoTMHPFx84x43OjzXauZHuZKlXNJZjGouZ2Vx5F6pZQ3Y7jZQRaOnJ77ig3SFxTuf0A">
+            <img class="hero-img" src="https://images.unsplash.com/photo-1501167786227-4cba60f6d58f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
           </div>
     </div>
 </body>
